CON-15 - Fix form alignment issues

--- a/dashboard-app/src/sass/app/_roomType.scss
+++ b/dashboard-app/src/sass/app/_roomType.scss
@@ -1,10 +1,13 @@
 
-img.img-center{
-    display:block;
-    margin: 0 auto;
-    cursor:pointer;
+img.img-center {
+  display: block;
+  margin: 0 auto;
+  cursor: pointer;
+  width: 60%;
+  height: 235px;
 }
 
 .centerText {
-    text-align: center;
+  text-align: center;
 }
+
